ghc-4335c07/testsuite/tests/indexed-types/should_compile/Simple18.hs
{-# LANGUAGE TypeFamilies #-}

module Simple18 where

type family F a

type instance F Int = [Int]

foo :: F Int
foo = [1]