ghc-4335c07/testsuite/tests/indexed-types/should_fail/NonLinearSigErr.hs
{-# LANGUAGE TypeFamilies #-}

-- This is actually perfectly ok!

module NonLinearSigErr where

type family E a b
type instance E a (a :: *) = [a]
